--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 
 <body>
     <header>
+        <nav class="navBar">
+            <a href="">Home</a>
+            <a href="">Space Store</a>
+            <a href="">Contact</a>
+        </nav>
         <h1>
             🚀 Space Explorer
         </h1>
         <img class="imgNebula" src="./images/nasa.jpg" alt="Bilde viser nebula">
+
     </header>
 
     <main>
