--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 </head>
 
 <body>
+
     <header>
         <nav class="navBar">
-            <a href="">Home</a>
-            <a href="">Space Store</a>
-            <a href="">Contact</a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Space Store</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
         </nav>
-        <h1>
-            🚀 Space Explorer
-        </h1>
-        <img class="imgNebula" src="./images/nasa.jpg" alt="Bilde viser nebula">
-
+        <section class="headerEn">
+            <h1>
+                🚀 Space Explorer
+            </h1>
+            <img class="imgNebula" src="./images/nasa.jpg" alt="Nebula">
+        </section>
     </header>
 
     <main>
